--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href="style.css" />
+</head>
 <header>
     <h1>
         <a href="/">RUN BUDDY</a>
