--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <link rel="stylesheet" href="style.css" />
 </head>
+<body>
 <header>
     <h1>
         <a href="/">RUN BUDDY</a>
     </h1>
+
     <nav>
 <!-- Unordered list element-->
 <ul>
@@ -28,7 +30,6 @@
     </nav>
 </header>
 
-</section>
 <!-- hero/jumbotron -->
 <section>
     <div>
@@ -82,7 +83,7 @@
     <h2>Reach Out</h2>
 </section>
 </header>
-
+</body>
 <!-- footer -->
 <footer>
     <h2>Made with love by Run Buddy</h2>
