--- a/index.html
+++ b/index.html
@@ -68,51 +68,107 @@
 </section>
 
 <!-- "what we do" section -->
-<section id="what-we-do">
-    <h2>What We Do</h2>
+<section id="what-we-do" class="intro">
+    <h2 class="section-title primary-border">What We Do</h2>
     <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
     </p>
 </section>
 
 <!-- "what you do" section -->
-<section id="what-you-do">
-    <h2>What you do</h2>
+<section id="what-you-do" class="steps">
+    <h2 class="section-title secondary-border">What you do</h2>
 
     <div>
         <!-- insert this img element -->
         <img src="./assets/images/step-1.svg" alt= "" />
-        <h3>Step 1: Fill Out the Form Above.</h3>
+        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
         <p>You're already here, so why not?</p>
     </div>
 
     <div>
         <img src="./assets/images/step-2.svg" alt="" />
-        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
         <p>Are you here to build muscle, lose weight, or just to feel good?</p>
     </div>
 
     <div>
         <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 3: Get Running.</h3>
+        <h3>Step 3: <span>Get Running.</span></h3>
         <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
 
     <div>
         <img src="./assets/images/step-4.svg" alt="" />
-        <h3>Step 4: See Results.</h3>
+        <h3>Step 4: <span>See Results.</span></h3>
         <p>Bi-weekly checkins with yor trainer will keep you focused.</p>
     </div>
 </section>
 
 <!-- "meet the trainers" section -->
-<section>
-    <h2>Meet The Trainers</h2>
+<section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">
+        Meet The Trainers
+    </h2>
+<article class="trainer">
+    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+    <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+    </div>
+</article>
+<article class="trainer">
+    <div class="trainer-bio text-right">
+      <h3>Joanna Gill</h3>
+      <h4>Endurance</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+  </article>
+
+  <article class="trainer">
+    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    <div class="trainer-bio text-left">
+      <h3>Harry "the Headband" Smith</h3>
+      <h4>Strength</h4>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+      </p>
+    </div>
+  </article>
 </section>
 
 <!-- "reach out" section -->
-<section>
-    <h2>Reach Out</h2>
+<section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.1372010156206!2d-85.06600574876964!3d35.003270480261584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88607ba06afb6371%3A0x82424dd921273fdb!2s3973%20Sycamore%20Cove%20Ln%2C%20Apison%2C%20TN%2037302!5e0!3m2!1sen!2sus!4v1618866781527!5m2!1sen!2sus" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+        </iframe>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town, Ca <br />
+                12345<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br />
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
 </section>
 
 </header>
@@ -122,7 +178,7 @@
     <h2>Made with love by Run Buddy</h2>
     
     <div>
-    <a href="#">Read Our Privacy Policy</a><br />
+    <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
     &copy; 2019 Run Buddy, Inc.
     </div>
 
