--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
 <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
+            <div class="contact-form">
+                <h3>Contact Us</h3>
+                <form>
+                   <label for="contact-name">Your Name</label>
+                   <input type="text" id="contact-name" placeholder="Your Name" />
+              
+                   <label for="contact-message">Message</label>
+                   <textarea id="contact-message" placeholder="Message"></textarea>
+              
+                   <button type="submit">Submit</button>
+                  </form>
+              </div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.1372010156206!2d-85.06600574876964!3d35.003270480261584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88607ba06afb6371%3A0x82424dd921273fdb!2s3973%20Sycamore%20Cove%20Ln%2C%20Apison%2C%20TN%2037302!5e0!3m2!1sen!2sus!4v1618866781527!5m2!1sen!2sus" 
             style="border:0;" 
             allowfullscreen="" 
