--- a/index.html
+++ b/index.html
@@ -76,47 +76,78 @@
 
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
+   <div class="flex-row">
     <h2 class="section-title primary-border">What We Do</h2>
+    </div>
+    <div class="flex-row">
     <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
     </p>
+</div>
 </section>
 
 <!-- "what you do" section -->
 <section id="what-you-do" class="steps">
+    <div class="flex-row">
     <h2 class="section-title secondary-border">What you do</h2>
-
-    <div>
-        <!-- insert this img element -->
-        <img src="./assets/images/step-1.svg" alt= "" />
-        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+</div>
+<div class="step">
+    <h3>Step 1.</h3>
+    <div class="step-info">
+      <div class="step-img">
+        <img src="./assets/images/step-1.svg" alt="" />
+      </div>
+      <div class="step-text">
+        <h4>Fill Out The Form Above</h4>
         <p>You're already here, so why not?</p>
+      </div>
     </div>
-
-    <div>
+  </div>
+  <div class="step">
+    <h3>Step 2.</h3>
+    <div class="step-info">
+      <div class="step-img">
         <img src="./assets/images/step-2.svg" alt="" />
-        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-        <p>Are you here to build muscle, lose weight, or just to feel good?</p>
+      </div>
+      <div class="step-text">
+        <h4>Consult With One Of Our Trainers</h4>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+      </div>
     </div>
-
-    <div>
+  </div>
+  <div class="step">
+    <h3>Step 3.</h3>
+    <div class="step-info">
+      <div class="step-img">
         <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 3: <span>Get Running.</span></h3>
+      </div>
+      <div class="step-text">
+        <h4>Get Running</h4>
         <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+      </div>
     </div>
-
-    <div>
+  </div>
+  <div class="step">
+    <h3>Step 4.</h3>
+    <div class="step-info">
+      <div class="step-img">
         <img src="./assets/images/step-4.svg" alt="" />
-        <h3>Step 4: <span>See Results.</span></h3>
-        <p>Bi-weekly checkins with yor trainer will keep you focused.</p>
+      </div>
+      <div class="step-text">
+        <h4>See Results</h4>
+        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+      </div>
     </div>
-</section>
+  </div>
+  </section>
 
 <!-- "meet the trainers" section -->
 <section id="your-trainers" class="trainers">
+    <div class="flex-row">
     <h2 class="section-title primary-border">
         Meet The Trainers
     </h2>
+    </div>
 <article class="trainer">
     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
     <div class="trainer-bio text-left">
@@ -155,7 +186,9 @@
 
 <!-- "reach out" section -->
 <section id="reach-out" class="contact">
+    <div class="flex-row">
     <h2 class="section-title secondary-border">Reach Out</h2>
+</div>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3268.1372010156206!2d-85.06600574876964!3d35.003270480261584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88607ba06afb6371%3A0x82424dd921273fdb!2s3973%20Sycamore%20Cove%20Ln%2C%20Apison%2C%20TN%2037302!5e0!3m2!1sen!2sus!4v1618866781527!5m2!1sen!2sus" 
             style="border:0;" 
